[package]
name = "drankdzjn"
version = "0.1.0"
authors = ["Tumas Bajoras <tumas.bajoras@gmail.com>"]
edition = "2018"

[dependencies]
colour = "0.5.0"
libmath = "0.2.1"
log = "0.4.11"
prettytable-rs = "^0.8"
regex = "1.4.2"
reqwest = { version = "0.10", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.8.0"
structopt = { version = "0.3", default-features = false }
structopt-flags = "0.3.6"
tokio = { version = "0.2", features = ["full"] }