[package]
name = "drankdzjn"
version = "0.1.0"
authors = ["Tumas Bajoras <tumas.bajoras@gmail.com>"]
edition = "2021"

[dependencies]
colour = "0.6.0"
libmath = "0.2.1"
log = "0.4.14"
prettytable-rs = "^0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.11"
structopt = { version = "0.3", default-features = false }
structopt-flags = "0.3.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }